--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* TODO: Pick a better font */
-/* TODO: Add SVGs of types as well */
-
 :root {
   --glow-rgb: 245 245 245;
 
@@ -439,7 +436,7 @@ body {
 
 .card {
   width: 90%;
-  max-width: 1000px;
+  max-width: 750px;
   max-height: 500px;
   background-color: var(--dark-orange-rgb); /* #cc322a */
   color: #555;
@@ -467,7 +464,7 @@ body {
   height: 60px;
   border-radius: 30px; /* makes it pretty and round */
   flex: auto;
-  max-width: 800px; /* fixes bar to adjust by screen size to not squish the search icon in mobile */
+  max-width: 650px;
   margin-right: 16px;
   font-size: 18px;
 }
@@ -477,14 +474,14 @@ body {
   outline: 0;
   background: #e6d596;
   border-radius: 50%; /* circle */
-  max-width: 100%; /* icon container shrinks based on screen size for mobile */
+  max-width: 100%;
   height: auto;
   cursor: pointer;
 }
 
 .search button img {
   width: 100%;
-  max-width: 48px; /* icon image shrinks based on screen size for mobile */
+  max-width: 48px;
   height: auto;
 }
 
